Update and features, removed mostly unused code and added a few new components and renamed some. Also added some more imports and npm installs.
Co-authored-by: TeeDestroyer <TeeDestroyer@users.noreply.github.com>

--- a/vite-template-react-ts-jest-main/tsconfig.json
+++ b/vite-template-react-ts-jest-main/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "esModuleInterop": true,
+ 
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,7 +21,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "@testing-library/jest-dom"]
+   "types": ["node", "@testing-library/jest-dom", "react", "react-dom"]
   },
   "include": ["src"],
   "references": [
