--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/aria-query": "^5.0.4",
     "@types/body-parser": "^1.19.5",
     "@types/connect": "^3.4.38",
     "@types/cookiejar": "^2.1.5",
@@ -15,6 +16,7 @@
     "@types/http-cache-semantics": "^4.0.4",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/methods": "^1.1.4",
     "@types/mime": "^3.0.4",
     "@types/qs": "^6.9.18",
@@ -23,6 +25,7 @@
     "@types/serve-static": "^1.15.7",
     "@types/superagent": "^8.1.9",
     "@types/supertest": "^6.0.2",
+    "@types/tough-cookie": "^4.0.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
