Update and features, changed values of different css-styles in GlobalComponents, added code for the homePage
Co-authored-by: TeeDestroyer <TeeDestroyer@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8"
+  },
+  "devDependencies": {
+    "@types/testing-library__jest-dom": "^6.0.0"
   }
 }
