--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.8"
+    "@mui/material": "^6.4.8",
+    "maplibre-gl-vector-text-protocol": "^0.0.5"
   },
   "devDependencies": {
     "@types/testing-library__jest-dom": "^6.0.0"
