Added functions that populate region data in mongodb, mongodb database also now contain region data in geojson format

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /backend/build/
 /backend/.env
 database/
+WikidataQuery/debug/formattedRegionDataTest.geojson
+WikidataQuery/debug/formattedRegionData.geojson
+WikidataQuery/debug/raw4.geojson
