--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "esModuleInterop": true,
- 
+    "resolveJsonModule": true,
+   
 
     /* Bundler mode */
     "moduleResolution": "bundler",
