--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.8",
-    "maplibre-gl-vector-text-protocol": "^0.0.5"
+    "@mui/material": "^6.4.10",
+    "maplibre-gl": "^5.3.0",
+    "maplibre-gl-vector-text-protocol": "^0.0.5",
+    "react": "^19.1.0",
+    "vite": "^6.2.5"
   },
   "devDependencies": {
     "@types/testing-library__jest-dom": "^6.0.0"
