--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@tmcw/togeojson": "^7.0.0",
     "maplibre-gl": "^5.3.0",
     "maplibre-gl-vector-text-protocol": "^0.0.5",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0"
