officialLanguage info inkluderas

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ WikidataQuery/debug/signlanguage.json
 WikidataQuery/debug/languages.json
 WikidataQuery/debug/minifiedFormattedRegionData.geojson
 WikidataQuery/debug/raw4.geojson
+WikidataQuery/debug/languagesOLD.json
