Add region country names in english to metadata collection in database

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ WikidataQuery/debug/languages.json
 WikidataQuery/debug/minifiedFormattedRegionData.geojson
 WikidataQuery/debug/raw4.geojson
 WikidataQuery/debug/languagesOLD.json
+WikidataQuery/debug/langmetadataOLD1.json
