--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.10",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@tmcw/togeojson": "^7.0.0",
     "maplibre-gl": "^5.3.0",
     "maplibre-gl-vector-text-protocol": "^0.0.5",
