--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/mongoose": "^11.0.2",
+    "@nestjs/platform-express": "^11.0.20",
     "axios": "^1.8.4",
     "maplibre-gl": "^5.2.0",
     "mongoose": "^8.12.1",
