Fixed country osm data not being accurate

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ WikidataQuery/debug/minifiedFormattedRegionData.geojson
 WikidataQuery/debug/raw4.geojson
 WikidataQuery/debug/languagesOLD.json
 WikidataQuery/debug/langmetadataOLD1.json
+WikidataQuery/debug/langmetadataOK.json
